# slambook2

./: .gitignore  README.md
ch3/examples/: plotTrajectory.cpp
ch3/useEigen/: eigenMatrix.cpp
ch3/useGeometry/: eigenGeometry.cpp
ch4/: CMakeLists.txt  useSophus.cpp
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: CMakeLists.txt  joinMap.cpp
ch5/stereo/: CMakeLists.txt  stereoVision.cpp
ch6/: ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
